src/components/trophycase.scss
@import 'variables';

.trophycase {

    .flip-list {
        padding: $standard 0;
        padding-bottom: (2 * $standard);
        width: 100%;
        overflow: scroll;

        img {
            padding: $standard / 3;
            max-width: 75px; //totally arbitrary
        }

        a {
            display: inline-block;
            position: relative;
        }

        .partial {
            display: inline-block;
            position: absolute;
            left: 0;
            background: $cmwn-white;
            overflow: hidden;
        }
    }

    .earned,
    .in-progress {
        display: inline-block;
        padding: $standard;
        padding-bottom: 0;
        width: 100%;
        overflow: scroll;
        white-space: nowrap;

        strong {
            color: $cmwn-purple;
        }
    }

    .earned-header {
        font-family: "CMWNJadeRegular", Impact, Helvetica, Arial, sans-serif;
        font-size: 1.25rem;
    }

    .earned-value {
        font-size: 2rem;
    }

    .spacer {
        display: block;
        visibility: hidden;
        padding: 10px;
    }

    // Pulse
    @keyframes pulse {
        to {
            transform: scale(1.1);
        }
    }

    .pulse {
        display: inline-block;
        transform: translateZ(0);
        animation-name: pulse;
        animation-duration: .5s;
        animation-timing-function: linear;
        animation-delay: .3s;
        animation-iteration-count: infinite;
        animation-direction: alternate;
        margin: 0 .5rem;
        box-shadow: 0 0 1px $cmwn-black;
        vertical-align: middle;
        backface-visibility: hidden;
    }

    // Buzz
    @keyframes buzz {
        50% {
            transform: translateX(3px) rotate(2deg);
        }

        100% {
            transform: translateX(-3px) rotate(-2deg);
        }
    }

    .buzz {
        display: inline-block;
        transform: translateZ(0);
        box-shadow: 0 0 1px $cmwn-black;
        vertical-align: middle;
        backface-visibility: hidden;
    }

    .buzz:hover,
    .buzz:focus,
    .buzz:active {
        animation-name: buzz;
        animation-duration: .15s;
        animation-timing-function: linear;
        animation-iteration-count: infinite;
    }

    // Float Shadow
    .float {
        display: inline-block;
        position: relative;
        transform: translateY(-5px) translateZ(0);
        box-shadow: 0 0 1px $cmwn-black;
        vertical-align: middle;
        backface-visibility: hidden;
        transition-duration: .3s;
        transition-property: transform;
    }

    .float::before {
        position: absolute;
        top: 100%;
        left: 5%;
        transform: translateY(5px);
        z-index: -1;
        // scss-lint:disable all
        background: radial-gradient(ellipse at center, rgba(0, 0, 0, .35) 0%, $cmwn-black 80%);
        // scss-lint:enable all
        width: 90%;
        height: 10px;
        content: '';
        //opacity: 0; // which one do we want?!? MPR: huh... lets remove both and really find out, eh?
        //opacity: 1;
        transition-property: transform, opacity;
        pointer-events: none;
        transition-duration: .5s;
    }

    .flip {
        transform: perspective(500px) rotateY(90deg) scale(.9);
        border: 0;
    }

    .flip:hover {
        transform: perspective(500px) rotateY(0) scale(1);
    }
}

